fdo#36933: Fixed array comparison with external references.